--- a/yu.html
+++ b/yu.html
@@ -38,98 +38,78 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="/sharehouse">STAY HERE : )</a></li>
-							<li><a href="yu.html">Yeungnam University</a></li>
-							<li><a href="itaewon.html">Itaewon</a></li>
-						</ul>
-					</nav>
+				<nav id="menu">
+					<h2>Menu</h2>
+					<ul>
+						<li><a href="/sharehouse">STAY HERE : )</a></li>
+						<li><a href="yu.html">Yeungnam University</a></li>
+						<li><a href="itaewon.html">Itaewon</a></li>
+					</ul>
+				</nav>
 
 				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<h1>영남대 셰어하우스</h1>
-							<font size="2">
-								<p>
-									영화를 좋아하는 사람들을 위한 주거공간 입니다.<br>
-									영화관 같은 거실에서 하우스메이트들과 영화 한 편 보는 일상을 즐겨보세요.<br>
-									나초와 팝콘, 오징어까지 준비하는 센스 있는 친구들이 온다면 더 좋을 것 같네요.<br>
-									2월 중순 입주 가능 하며, 인테리어 및 가구 배치 후 추가적으로 사진 업데이트 하겠습니다 :)<br>
-									<br>
-									셰어하우스 여성전용 또한 준비중에 있으니, 문의는 카톡 또는 전화주시면 됩니다!!
-								</p>
-								<p>
-									<b>
-									성 별 : 남성전용 <br>
-									구 조 : 거실, 부엌, 방3, 화장실2, 발코니2<br>
-									주택유형 : 아파트<br>
-									계약기간 : 6개월 이상 <br>
-									관리비(공과금): 1/N<br>
-									개인옵션 : 침대, 옷장, 책상, 의자 등<br>
-									제공시설 : 영화관, 지하주차장, 엘리베이터, 와이파이, 신발장, 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 식기세트. 취사도구, 커피포트 등
-									</b>
-								</p>
-								<p>
-									<font size="1" color="orange">(단위 : 만원, 보증금 / 월세)</font>	<br>
-									<b>ROOM1 (2인실) - ￦60 / ￦29 - (입주신청 가능)</b><br>
-									<b style="text-decoration:line-through;">
-										ROOM2 (1인실) - ￦70 / ￦32 - (입주완료, 입주가능일 : 2017-08-13)
-									</b><br>
-									<b>ROOM3 (1인실) - ￦70 / ￦33 - (입주신청 가능)</b>
-								</p>
-							</font>
-							<span class="image main"><img src="images3/yu_map.jpg" alt="" /></span>
-							<span class="image main"><img src="images3/yu_full.jpg" alt="" /></span>
-							<span class="image main"><img src="images3/yu_g.jpg" alt="" /></span>
-						</div>
+				<div id="main">
+					<div class="inner">
+						<h1>영남대 셰어하우스</h1>
+						<span class="image main"><img src="images3/yu_map.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/yu_full.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/yu_g.jpg" alt="" /></span>
 					</div>
-
+				</div>
 				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>CONACT</h2>
-								<form method="post" action="#">
-									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="" value="kakao : chdichake" readonly/>
-									</div>
-									<div class="field half">
-										<input type="text" name="email" id="email" placeholder="Email" value="" readonly/>
-									</div>
-									<div class="field">
-										<input type="text" name="email" id="email" placeholder="" value="TEL. 010 - 5366 - 2182" readonly/>
-									</div>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; stay here. All rights reserved</li>
-							</ul>
-						</div>
-					</footer>
-
+				<footer id="footer">
+					<div class="inner">
+						<font size="2">
+							<p>
+								<font color="orange"><b>영화를 좋아하는 사람들을 위한 주거공간 입니다.</b></font><br>
+								영화관 같은 거실에서 하우스메이트들과 영화 한 편 보는 일상을 즐겨보세요.
+								나초와 팝콘, 오징어까지 준비하는 센스 있는 친구들이 온다면 더 좋을 것 같네요.<br>
+								2월 중순 입주 가능 하며, 인테리어 및 가구 배치 후 추가적으로 사진 업데이트 하겠습니다 :)<br>
+								<br>
+								셰어하우스 여성전용 또한 준비중에 있으니,<br> 문의는 카톡 또는 전화주시면 됩니다!!
+							</p>
+							<p>
+								<b>
+								<font color="orange">지점소개</font><br>
+								성 별 : 남성전용 <br>
+								구 조 : 거실, 부엌, 방3, 화장실2, 발코니2<br>
+								주택유형 : 아파트<br>
+								계약기간 : 6개월 이상 <br>
+								관리비(공과금): 1/N<br>
+								개인옵션 : 침대, 옷장, 책상, 의자 등<br>
+								제공시설 : 영화관, 지하주차장, 엘리베이터, 와이파이, 신발장, 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 식기세트. 취사도구, 커피포트 등
+								</b>
+							</p>
+							<p>
+								<b>
+								<font color="orange">(단위 : 만원, 보증금 / 월세)</font>	<br>
+								ROOM1 (2인실) - ￦60 / ￦29 - (입주신청 가능)<br>
+								<b style="text-decoration:line-through;">
+									ROOM2 (1인실) - ￦70 / ￦32 - (입주완료, 입주가능일 : 2017-08-13)
+								</b>
+								<br>
+								ROOM3 (1인실) - ￦70 / ￦33 - (입주신청 가능)
+								</b>
+							</p>
+							<p>
+								<b>
+								<font color="orange">CONACT</font><br>
+								카카오 : chdichake<br>
+								문의 : <a href="tel:010-5366-2182">010-5366-2182</a>
+								</b>
+							</p>
+						</font>
+						<ul class="copyright">
+							<li>&copy; stay here. All rights reserved</li>
+						</ul>
+					</div>
+				</footer>
 			</div>
 
-		<!-- Scripts -->
+			<!-- Scripts -->
 			<script src="assets3/js/jquery.min.js"></script>
 			<script src="assets3/js/skel.min.js"></script>
 			<script src="assets3/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets3/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets3/js/main.js"></script>
-
 	</body>
 </html>
