--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
 								<h2>CONACT</h2>
 								<form method="post" action="#">
 									<div class="field half first">
-										<input type="text" name="name" id="name" placeholder="" value="kakao : chdichake" readonly/>
+										<input type="text" name="email" id="email" placeholder="" value="☎　 010-5366-2182" readonly/>
 									</div>
 									<div class="field half">
-										<input type="text" name="email" id="email" placeholder="Email" value="" readonly/>
+										<input type="text" name="email" id="email" placeholder="" value="" readonly/>
 									</div>
 									<div class="field">
-										<input type="text" name="email" id="email" placeholder="" value="TEL. 010 - 5366 - 2182" readonly/>
+										<input type="text" name="name" id="name" placeholder="" value="Kakao : chdichake" readonly/>
 									</div>
 								</form>
 							</section>
