--- a/yu.html
+++ b/yu.html
@@ -51,41 +51,44 @@
 				<div id="main">
 					<div class="inner">
 						<h1>영남대 셰어하우스</h1>
-						<span class="image main"><img src="images3/yu_map.jpg" alt="" /></span>
-						<span class="image main"><img src="images3/yu_full.jpg" alt="" /></span>
-						<span class="image main"><img src="images3/yu_g.jpg" alt="" /></span>
+						<span class=""><img src="images3/yu_full.jpg" alt="" /></span>
+						<span class=""><img src="images3/yu_g.jpg" alt="" /></span>
+						<span class=""><img src="images3/yu_hus.jpg" alt="" /></span>
+						<span class=""><img src="images3/yu_map.jpg" alt="" /></span>
+						<!-- <span class="image main"><img src="images3/yu_map.jpg" alt="" /></span> -->
 					</div>
 				</div>
 				<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
 						<font size="2">
-							<p>
+							<p><b>
 								<font color="orange"><b>영화를 좋아하는 사람들을 위한 주거공간 입니다.</b></font><br>
 								영화관 같은 거실에서 하우스메이트들과 영화 한 편 보는 일상을 즐겨보세요.
 								나초와 팝콘, 오징어까지 준비하는 센스 있는 친구들이 온다면 더 좋을 것 같네요.<br>
 								2월 중순 입주 가능 하며, 인테리어 및 가구 배치 후 추가적으로 사진 업데이트 하겠습니다 :)<br>
-								<br>
-								셰어하우스 여성전용 또한 준비중에 있으니,<br> 문의는 카톡 또는 전화주시면 됩니다!!
+								사전 입주 예약 시 <font color="red">'월세 할인 이벤트'</font> 있어요!<br>
+								문의는 카톡 또는 전화 언제든지 가능 합니다.
+								</b>
 							</p>
 							<p>
 								<b>
 								<font color="orange">지점소개</font><br>
-								성 별 : 남성전용 <br>
 								구 조 : 거실, 부엌, 방3, 화장실2, 발코니2<br>
 								주택유형 : 아파트<br>
-								계약기간 : 6개월 이상 <br>
-								관리비(공과금): 1/N<br>
+								계약기간 : 6개월  또는 1년 <br>
 								개인옵션 : 침대, 옷장, 책상, 의자 등<br>
-								제공시설 : 영화관, 지하주차장, 엘리베이터, 와이파이, 신발장, 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 식기세트. 취사도구, 커피포트 등
+								제공시설 : 영화관(거실), 쇼파/의자/흔들의자(거실), 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 신발장, 식기, 취사도구, 커피포트 등 <br>
+								기타 : 지상/지하 주차가능, 엘리베이터 있음, 와이파이 가능
 								</b>
 							</p>
 							<p>
 								<b>
 								<font color="orange">(단위 : 만원, 보증금 / 월세)</font>	<br>
 								ROOM1 (2인실) - ￦60 / ￦29 - (입주신청 가능)<br>
-								<b style="text-decoration:line-through;">
-									ROOM2 (1인실) - ￦70 / ￦32 - (입주완료, 입주가능일 : 2017-08-13)
+								<!-- <b style="text-decoration:line-through;"> -->
+								<b>
+									ROOM2 (1인실) - ￦70 / ￦32 - (예약대기 : 1)<!-- (입주완료, 입주가능일 : 2017-08-13) -->
 								</b>
 								<br>
 								ROOM3 (1인실) - ￦70 / ￦33 - (입주신청 가능)
