--- a/yu.html
+++ b/yu.html
@@ -51,11 +51,10 @@
 				<div id="main">
 					<div class="inner">
 						<h1>영남대 셰어하우스</h1>
-						<span class=""><img src="images3/yu_full.jpg" alt="" /></span>
-						<span class=""><img src="images3/yu_g.jpg" alt="" /></span>
-						<span class=""><img src="images3/yu_hus.jpg" alt="" /></span>
-						<span class=""><img src="images3/yu_map.jpg" alt="" /></span>
-						<!-- <span class="image main"><img src="images3/yu_map.jpg" alt="" /></span> -->
+						<span class="image main"><img src="images3/yu_full.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/yu_g.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/yu_hus.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/yu_map.jpg" alt="" /></span>
 					</div>
 				</div>
 				<!-- Footer -->
