--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 							<!-- Logo -->
 								<a href="/sharehouse" class="logo">
-									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">stay here : shareHouse</span>
+									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">stay here : 셰어하우스</span>
 								</a>
 
 							<!-- Nav -->
@@ -36,9 +36,9 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="/sharehouse">STAY HERE : ) </a></li>
-							<li><a href="yu.html">Yeungnam University</a></li>
-							<li><a href="itaewon.html">Itaewon</a></li>
+							<li><a href="/sharehouse">스테이히얼 : ) </a></li>
+							<li><a href="yu.html">영남대학교</a></li>
+							<li><a href="itaewon.html">이태원</a></li>
 						</ul>
 					</nav>
 
@@ -46,21 +46,26 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-							<h1>'STAY HERE' Share House is not just a house to live in, but a youth culture space with a different value and different colors.</h1>
-							<p>There is a private space where you can spend your time alone, 
-								as well as a common space where everyone can hang out. 
-								Through systematic house management and various life and community services,
-								You can enjoy convenience and value of life at the same time.
-							</p>
-							<p><font size="2">
-								'STAY HERE' 셰어하우스는 단순히 모여사는 집이 아닌, 남다른 가치를 가지고, 다양한 사람들과 함께 성장하는 '모두가 주인공인' 공간 입니다.<br>
-								혼자만의 시간을 보낼 수 있는 개인공간은 물론, 모두가 어울릴 수 있는 공용공간이 구성되어 있습니다. 
-								체계적인 하우스 관리와 다양한 생활 서비스 및 커뮤니티 서비스를 통해, 생활의 편리와 가치를 동시에 누릴 수 있습니다. 
-								</font>
-							</p>
-								<!-- <h1>The share house to change your life,<br> Welcome to 'STAY HERE' <a href="/sharehouse">share house</a>.</h1>
-								<p>Living exists to provide a new experience for those looking for a fun and funny.<br>In addition to public space and the private space that reflects the various concepts to spend time alone, you can experience the 'joy together.</p>
-							</header> -->
+								<h1>나의 두번 째 식구를 만나다.</h1>
+								<p>
+									<font size="2">
+									'함께가 아닌 개인의 삶이 편해진 세상'에 '사람과 사랑에 상처 받은 이들이 마음의 온기를 나누는 곳' 독립성과 유대감을 동시에 누리는 새로운 주거형태 '셰어하우스 스테이히얼' 입니다.<br>
+									셰어하우스 입주자는 저비용 대비 쾌적한 주거환경과 정서적인 유대감으로 삶의 질을 높이는 장점이 있습니다.
+									여럿이서 함께 살면 1인 삶보다 일상생활이 풍요로워지고 다양한 커뮤니티를 형성할 수 있는 좋은 기회가 될 것입니다.
+									셰어하우스 스테이히얼은 공동 공간을 함께 나누어 쓰며 입주자간의 따뜻한 교류가 이루어지는 주거공간이 되도록 노력합니다.
+									</font>
+								</p>
+								<p>
+									<font size="2">
+									<b>'왜 셰어하우스 일까요?'</b><br>
+									셰어하우스는 독립적인 공간과 공유하는 공간(거실, 주방, 화장실, 테라스 등)이 접목된 새로운 형태의 주거 공간입니다.<br>
+									1.집에서 홀로 밥 먹는게 싫다.<br>
+									2.새로운 사람들을 만나보고 싶다.<br>
+									3.생활비는 절약하고, 더 멋진 주거환경을 갖고 싶다.<br>
+									4.같이 살면 안전할 것 같다.
+									</font>
+								</p>
+							</header>
 							<section class="tiles">
 								<article class="style3">
 									<span class="image">
@@ -141,9 +146,9 @@
 									<div class="field half first">
 										<input type="text" name="email" id="email" placeholder="" value="☎　 010-5366-2182" readonly/>
 									</div>
-									<div class="field half">
+									<!-- <div class="field half">
 										<input type="text" name="email" id="email" placeholder="" value="" readonly/>
-									</div>
+									</div> -->
 									<div class="field">
 										<input type="text" name="name" id="name" placeholder="" value="Kakao : chdichake" readonly/>
 									</div>
