--- a/itaewon.html
+++ b/itaewon.html
@@ -41,9 +41,9 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="/sharehouse">STAY HERE : )</a></li>
-							<li><a href="yu.html">Yeungnam University</a></li>
-							<li><a href="itaewon.html">Itaewon</a></li>
+							<li><a href="/sharehouse">스테이히얼 : ) </a></li>
+							<li><a href="yu.html">영남대학교</a></li>
+							<li><a href="itaewon.html">이태원</a></li>
 						</ul>
 					</nav>
 
@@ -63,7 +63,6 @@
 							<p>
 								<b>
 								<font color="orange">지점소개</font><br>
-								성별 : 여성전용 <br>
 								구조 : 거실, 부엌, 방3, 화장실1, 발코니1<br>
 								주택유형 : 주택2층<br>
 								계약기간 : 6개월 이상 <br>
