--- a/yu.html
+++ b/yu.html
@@ -41,9 +41,9 @@
 				<nav id="menu">
 					<h2>Menu</h2>
 					<ul>
-						<li><a href="/sharehouse">STAY HERE : )</a></li>
-						<li><a href="yu.html">Yeungnam University</a></li>
-						<li><a href="itaewon.html">Itaewon</a></li>
+						<li><a href="/sharehouse">스테이히얼 : ) </a></li>
+						<li><a href="yu.html">영남대학교</a></li>
+						<li><a href="itaewon.html">이태원</a></li>
 					</ul>
 				</nav>
 
@@ -64,33 +64,31 @@
 							<p><b>
 								<font color="orange"><b>영화를 좋아하는 사람들을 위한 주거공간 입니다.</b></font><br>
 								영화관 같은 거실에서 하우스메이트들과 영화 한 편 보는 일상을 즐겨보세요.
-								나초와 팝콘, 오징어까지 준비하는 센스 있는 친구들이 온다면 더 좋을 것 같네요.<br>
+								나초와 팝콘, 오징어까지 준비하는 센스 있는 친구들이 온다면 더 좋을 것 같네요!<br>
 								2월 중순 입주 가능 하며, 인테리어 및 가구 배치 후 추가적으로 사진 업데이트 하겠습니다 :)<br>
-								사전 입주 예약 시 <font color="red">'월세 할인 이벤트'</font> 있어요!<br>
-								문의는 카톡 또는 전화 언제든지 가능 합니다.
+								입주견학 신청 및 문의는 카톡 또는 전화주시면 감사하겠습니다.
 								</b>
 							</p>
 							<p>
 								<b>
 								<font color="orange">지점소개</font><br>
-								구 조 : 거실, 부엌, 방3, 화장실2, 발코니2<br>
-								주택유형 : 아파트<br>
+								구 조 : 방3, 화장실2, 발코니2, 거실, 부엌 <br>
 								계약기간 : 6개월  또는 1년 <br>
-								개인옵션 : 침대, 옷장, 책상, 의자 등<br>
-								제공시설 : 영화관(거실), 쇼파/의자/흔들의자(거실), 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 신발장, 식기, 취사도구, 커피포트 등 <br>
-								기타 : 지상/지하 주차가능, 엘리베이터 있음, 와이파이 가능
+								개인옵션 : 침대, 옷행거, 책상, 의자, 실내화 등<br>
+								제공시설 : 쇼파/의자/흔들의자(거실), 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 신발장, 식기, 취사도구, 커피포트, 청소도구 등 <br>
+								기타 : 지상/지하 주차가능, 엘리베이터 있음, 와이파이 가능, 입주수수료 없음!
 								</b>
 							</p>
 							<p>
 								<b>
-								<font color="orange">(단위 : 만원, 보증금 / 월세)</font>	<br>
-								ROOM1 (2인실) - ￦60 / ￦29 - (입주신청 가능)<br>
-								<!-- <b style="text-decoration:line-through;"> -->
+								<font color="orange">(단위 : 만원, 보증금  / 월세 )</font>	<br>
+									ROOM1 (2인실) - ￦70 / ￦25<br>
+									<!-- <b style="text-decoration:line-through;"> -->
 								<b>
-									ROOM2 (1인실) - ￦70 / ￦32 - (예약대기 : 1)<!-- (입주완료, 입주가능일 : 2017-08-13) -->
+									ROOM2 (1인실) - ￦70 / ￦30
 								</b>
 								<br>
-								ROOM3 (1인실) - ￦70 / ￦33 - (입주신청 가능)
+									ROOM3 (1인실) - ￦70 / ￦33
 								</b>
 							</p>
 							<p>
