--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 							<!-- Logo -->
 								<a href="/sharehouse" class="logo">
-									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">stay here : 셰어하우스</span>
+									<span class="symbol"><img src="images3/logo.jpg" alt="" /></span><span class="title">stay here : 셰어하우스</span>
 								</a>
 
 							<!-- Nav -->
@@ -36,8 +36,8 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="/sharehouse">스테이히얼 : ) </a></li>
-							<li><a href="yu.html">영남대학교</a></li>
+							<li><a href="/sharehouse">STAY HERE ! </a></li>
+							<li><a href="yu.html">영남대학교 </a></li>
 							<li><a href="itaewon.html">이태원</a></li>
 						</ul>
 					</nav>
@@ -46,7 +46,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>나의 두번 째 식구를 만나다.</h1>
+								<h3>따로 또 같이, <br>나의 두번 째 식구를 만나다.</h3>
 								<p>
 									<font size="2">
 									'함께가 아닌 개인의 삶이 편해진 세상'에 '사람과 사랑에 상처 받은 이들이 마음의 온기를 나누는 곳' 독립성과 유대감을 동시에 누리는 새로운 주거형태 '셰어하우스 스테이히얼' 입니다.<br>
@@ -55,21 +55,21 @@
 									셰어하우스 스테이히얼은 공동 공간을 함께 나누어 쓰며 입주자간의 따뜻한 교류가 이루어지는 주거공간이 되도록 노력합니다.
 									</font>
 								</p>
+								<h3>'왜 셰어하우스 일까요?'</h3>
 								<p>
 									<font size="2">
-									<b>'왜 셰어하우스 일까요?'</b><br>
 									셰어하우스는 독립적인 공간과 공유하는 공간(거실, 주방, 화장실, 테라스 등)이 접목된 새로운 형태의 주거 공간입니다.<br>
-									1.집에서 홀로 밥 먹는게 싫다.<br>
-									2.새로운 사람들을 만나보고 싶다.<br>
-									3.생활비는 절약하고, 더 멋진 주거환경을 갖고 싶다.<br>
-									4.같이 살면 안전할 것 같다.
+									1. 집에서 홀로 밥 먹는게 싫다.<br>
+									2. 새로운 사람들을 만나보고 싶다.<br>
+									3. 생활비는 절약하고, 더 멋진 주거환경을 갖고 싶다.<br>
+									4. 같이 살면 안전할 것 같다.
 									</font>
 								</p>
 							</header>
 							<section class="tiles">
 								<article class="style3">
 									<span class="image">
-										<img src="images3/yu_g.jpg" alt="" height="300px" weight="300px"/>
+										<img src="images3/m2.jpg" alt="" height="300px" weight="300px"/>
 									</span>
 									<a href="yu.html">
 										<h2>영남대</h2>
@@ -89,7 +89,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<!-- <article class="style2">
 									<span class="image">
 										<img src="images3/pic02.jpg" alt="" height="300px" weight="300px"/>
 									</span>
@@ -132,7 +132,7 @@
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 							</section>
 						</div>
 					</div>
@@ -141,20 +141,25 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>CONACT</h2>
+								<!-- <h2>CONACT</h2> -->
 								<form method="post" action="#">
-									<div class="field half first">
-										<input type="text" name="email" id="email" placeholder="" value="☎　 010-5366-2182" readonly/>
+									<!-- <div class="field half first">
+										<input type="text" name="email" id="email" placeholder="" value="010.5366.2182" readonly/>
 									</div>
-									<!-- <div class="field half">
+									<div class="field half">
 										<input type="text" name="email" id="email" placeholder="" value="" readonly/>
-									</div> -->
+									</div>
 									<div class="field">
 										<input type="text" name="name" id="name" placeholder="" value="Kakao : chdichake" readonly/>
-									</div>
+									</div> -->
+									<p>
+										<font color="orange">C O N A C T</font><br>
+										tel . <a href="tel:010-5366-2182">010.5366.2182</a><br>
+										kakao . <a href="https://open.kakao.com/o/sJc0k3s">chdichake</a>
+									</p>
 								</form>
 							</section>
-							<section>
+							<!-- <section>
 								<h2>Follow</h2>
 								<ul class="icons">
 									<li><a class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
@@ -166,7 +171,7 @@
 									<li><a class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
 									<li><a class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
 								</ul>
-							</section>
+							</section> -->
 							<ul class="copyright">
 								<li>&copy; stay here. All rights reserved</li>
 							</ul>
