--- a/itaewon.html
+++ b/itaewon.html
@@ -24,7 +24,7 @@
 
 							<!-- Logo -->
 								<a href="/sharehouse" class="logo">
-									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">Itaewon</span>
+									<span class="symbol"><img src="images3/logo.jpg" alt="" /></span><span class="title">Itaewon</span>
 								</a>
 
 							<!-- Nav -->
