--- a/yu.html
+++ b/yu.html
@@ -24,7 +24,7 @@
 
 							<!-- Logo -->
 								<a href="/sharehouse" class="logo">
-									<span class="symbol"><img src="images3/logo.svg" alt="" /></span><span class="title">Yeungnam University</span>
+									<span class="symbol"><img src="images3/logo.jpg" alt="" /></span><span class="title">Yeungnam University</span>
 								</a>
 
 							<!-- Nav -->
@@ -52,49 +52,83 @@
 					<div class="inner">
 						<h1>영남대 셰어하우스</h1>
 						<span class="image main"><img src="images3/yu_full.jpg" alt="" /></span>
-						<span class="image main"><img src="images3/yu_g.jpg" alt="" /></span>
-						<span class="image main"><img src="images3/yu_hus.jpg" alt="" /></span>
-						<span class="image main"><img src="images3/yu_map.jpg" alt="" /></span>
+						<br>
+						<div align="center"><strong>↓ Livingroom : 영화와 휴식 공간</strong></div>
+						<span class="image main"><img src="images3/m1.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/m2.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/m3.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/m4.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/m5.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/m6.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/m7.jpg" alt="" /></span>
+						<br>
+						<div align="center"><strong>↓ kitchen</strong></div>
+						<span class="image main"><img src="images3/k1.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/k2.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/k3.jpg" alt="" /></span>
+						<br>
+						<div align="center"><strong>↓ ROOM 1 : 70/25만원 (2인실, 화장실 있음)</strong></div>
+						<span class="image main"><img src="images3/r11.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/r12.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/r13.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/r14.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/r15.jpg" alt="" /></span>
+						<br>
+						<div align="center"><strong>↓ ROOM 2 : 70/30만원 (1인실) - 침대는 배송 중 ㅠㅠ</strong></div>
+						<span class="image main"><img src="images3/r21.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/r22.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/r23.jpg" alt="" /></span>
+						<br>
+						<div align="center"><strong>↓ ROOM 3 : 70/33만원 (1인실) - 침대는 배송 중 ㅠㅠ</strong></div>
+						<span class="image main"><img src="images3/r31.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/r32.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/r33.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/r34.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/r35.jpg" alt="" /></span>
+						<br>
+						<div align="center"><strong>저비용 대비 쾌적한 주거환경과 정서적인 유대감으로 삶의 질을 높이는 장점이 있습니다.<br>
+													여럿이서 함께 살면 1인 삶보다 일상생활이 풍요로워지고 다양한 커뮤니티를 형성할 수 있는 좋은 기회가 될 것입니다.
+											</strong></div>
+						<br>
+						<span class="image main"><img src="images3/house.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/map.jpg" alt="" /></span>
+						
 					</div>
 				</div>
 				<!-- Footer -->
 				<footer id="footer">
 					<div class="inner">
-						<font size="2">
+						<font face="Garamond" size="2">
 							<p><b>
 								<font color="orange"><b>영화를 좋아하는 사람들을 위한 주거공간 입니다.</b></font><br>
 								영화관 같은 거실에서 하우스메이트들과 영화 한 편 보는 일상을 즐겨보세요.
 								나초와 팝콘, 오징어까지 준비하는 센스 있는 친구들이 온다면 더 좋을 것 같네요!<br>
 								2월 중순 입주 가능 하며, 인테리어 및 가구 배치 후 추가적으로 사진 업데이트 하겠습니다 :)<br>
 								입주견학 신청 및 문의는 카톡 또는 전화주시면 감사하겠습니다.
+								(여성 쉐어하우스 또한 준비중 이며, 많은 관심 부탁드리며 언제든지 문의 바랍니다.)
 								</b>
 							</p>
 							<p>
 								<b>
-								<font color="orange">지점소개</font><br>
-								구 조 : 방3, 화장실2, 발코니2, 거실, 부엌 <br>
-								계약기간 : 6개월  또는 1년 <br>
-								개인옵션 : 침대, 옷행거, 책상, 의자, 실내화 등<br>
-								제공시설 : 쇼파/의자/흔들의자(거실), 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 신발장, 식기, 취사도구, 커피포트, 청소도구 등 <br>
-								기타 : 지상/지하 주차가능, 엘리베이터 있음, 와이파이 가능, 입주수수료 없음!
+								<font color="#FE2E2E">남성전용 셰어하우스, 기본계약 최소 6개월<!-- <br>(** 1년 계약시 매월 2만원 할인) --></font><br>
+								◎ 구 조 - 방3, 화장실2, 발코니2, 거실, 부엌 <br>
+								◎ 개인옵션 - 침대, 옷행거, 책상, 의자, 실내화 등<br>
+								◎ 제공시설 - 빔프로젝트(영화), 쇼파/의자/흔들의자(거실), 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 신발장, 식기, 취사도구, 커피포트, 청소도구 등 <br>
+								◎ 기타 - 지상/지하 주차가능, 엘리베이터 있음, 와이파이, 입주 수수료 없음
 								</b>
 							</p>
 							<p>
 								<b>
-								<font color="orange">(단위 : 만원, 보증금  / 월세 )</font>	<br>
+									<font color="orange">(단위 : 만원, 보증금  / 월세 )</font>	<br>
 									ROOM1 (2인실) - ￦70 / ￦25<br>
-									<!-- <b style="text-decoration:line-through;"> -->
-								<b>
-									ROOM2 (1인실) - ￦70 / ￦30
-								</b>
-								<br>
+									ROOM2 (1인실) - ￦70 / ￦30<br>
 									ROOM3 (1인실) - ￦70 / ￦33
 								</b>
 							</p>
 							<p>
 								<b>
-								<font color="orange">CONACT</font><br>
-								카카오 : chdichake<br>
+								<font color="orange">C O N A C T</font><br>문
+								카카오톡 : <a href="https://open.kakao.com/o/sJc0k3s">chdichake</a><br>
 								문의 : <a href="tel:010-5366-2182">010-5366-2182</a>
 								</b>
 							</p>
