--- a/yu.html
+++ b/yu.html
@@ -86,9 +86,12 @@
 						<span class="image main"><img src="images3/r34.jpg" alt="" /></span>
 						<span class="image main"><img src="images3/r35.jpg" alt="" /></span>
 						<br>
-						<div align="center"><strong>저비용 대비 쾌적한 주거환경과 정서적인 유대감으로 삶의 질을 높이는 장점이 있습니다.<br>
-													여럿이서 함께 살면 1인 삶보다 일상생활이 풍요로워지고 다양한 커뮤니티를 형성할 수 있는 좋은 기회가 될 것입니다.
-											</strong></div>
+						<div align="center">
+							<strong>
+							입주 시 가구 구조변경 가능 하구요, 1인실 방 침대가 아직 배송중 이네요 ㅜㅜ<br>
+							침대 배치 후 추가 업데이트 진행 할게요!!
+							</strong>
+						</div>
 						<br>
 						<span class="image main"><img src="images3/house.jpg" alt="" /></span>
 						<span class="image main"><img src="images3/map.jpg" alt="" /></span>
