--- a/yu.html
+++ b/yu.html
@@ -137,7 +137,7 @@
 							</p>
 						</font>
 						<ul class="copyright">
-							<li>&copy; stay here. All rights reserved</li>
+							<li>stay here. &copy; All rights reserved</li>
 						</ul>
 					</div>
 				</footer>
