--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								</ul>
 							</section> -->
 							<ul class="copyright">
-								<li>&copy; stay here. All rights reserved</li>
+								<li>stay here. &copy; All rights reserved</li>
 							</ul>
 						</div>
 					</footer>
