--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<a href="yu.html">
 										<h2>영남대</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>I wish you a pleasant stay here.</p>
 										</div>
 									</a>
 								</article>
