--- a/yu.html
+++ b/yu.html
@@ -106,9 +106,8 @@
 								<font color="orange"><b>영화를 좋아하는 사람들을 위한 주거공간 입니다.</b></font><br>
 								영화관 같은 거실에서 하우스메이트들과 영화 한 편 보는 일상을 즐겨보세요.
 								나초와 팝콘, 오징어까지 준비하는 센스 있는 친구들이 온다면 더 좋을 것 같네요!<br>
-								2월 중순 입주 가능 하며, 인테리어 및 가구 배치 후 추가적으로 사진 업데이트 하겠습니다 :)<br>
-								입주견학 신청 및 문의는 카톡 또는 전화주시면 감사하겠습니다.
-								(여성 쉐어하우스 또한 준비중 이며, 많은 관심 부탁드리며 언제든지 문의 바랍니다.)
+								언제든지 입주가 가능 하며, 입주견학 신청 및 문의는 카톡 또는 전화주시면 감사하겠습니다.<br>
+								(여성 셰어하우스 또한 준비중 이니, 언제든지 문의 바랍니다.)
 								</b>
 							</p>
 							<p>
