--- a/yu.html
+++ b/yu.html
@@ -117,6 +117,7 @@
 								◎ 개인옵션 - 침대, 옷행거, 책상, 의자, 실내화 등<br>
 								◎ 제공시설 - 빔프로젝트(영화), 쇼파/의자/흔들의자(거실), 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 신발장, 식기, 취사도구, 커피포트, 청소도구 등 <br>
 								◎ 기타 - 지상/지하 주차가능, 엘리베이터 있음, 와이파이, 입주 수수료 없음
+								◎ 관리비(+공과금) 1/4
 								</b>
 							</p>
 							<p>
