--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
 									<p>
 										<font color="orange">C O N A C T</font><br>
 										tel . <a href="tel:010-5366-2182">010.5366.2182</a><br>
-										kakao . <a href="https://open.kakao.com/o/sJc0k3s">chdichake</a>
+										kakao . <a href="https://open.kakao.com/o/sJc0k3s">chdichake</a><br>
+										instagram . <a href="https://www.instagram.com/chadichake/">stayhere</a>
 									</p>
 								</form>
 							</section>
