--- a/yu.html
+++ b/yu.html
@@ -130,9 +130,10 @@
 							</p>
 							<p>
 								<b>
-								<font color="orange">C O N A C T</font><br>문
-								카카오톡 : <a href="https://open.kakao.com/o/sJc0k3s">chdichake</a><br>
-								문의 : <a href="tel:010-5366-2182">010-5366-2182</a>
+								<font color="orange">C O N A C T</font><br>
+								tel . <a href="tel:010-5366-2182">010.5366.2182</a><br>
+								kakao . <a href="https://open.kakao.com/o/sJc0k3s">chdichake</a><br>
+								instagram . <a href="https://www.instagram.com/chadichake/">stayhere</a>
 								</b>
 							</p>
 						</font>
