--- a/itaewon.html
+++ b/itaewon.html
@@ -83,8 +83,9 @@
 							<p>
 								<b>
 								<font color="orange">CONACT</font><br>
-								카카오 : chdichake<br>
-								문의 : <a href="tel:010-5366-2182">010-5366-2182</a>
+								tel . <a href="tel:010-5366-2182">010.5366.2182</a><br>
+								kakao . <a href="https://open.kakao.com/o/sJc0k3s">chdichake</a><br>
+								instagram . <a href="https://www.instagram.com/chadichake/">stayhere</a>
 								</b>
 							</p>							
 						</font>
