--- a/yu.html
+++ b/yu.html
@@ -41,7 +41,7 @@
 				<nav id="menu">
 					<h2>Menu</h2>
 					<ul>
-						<li><a href="/sharehouse">스테이히얼 : ) </a></li>
+						<li><a href="/sharehouse">STAY HERE !</a></li>
 						<li><a href="yu.html">영남대학교</a></li>
 						<li><a href="itaewon.html">이태원</a></li>
 					</ul>
