--- a/yu.html
+++ b/yu.html
@@ -53,6 +53,7 @@
 						<h1>영남대 셰어하우스</h1>
 						<span class="image main"><img src="images3/yu_full.jpg" alt="" /></span>
 						<br>
+						<div align="center"><strong><font color="orange">'여성전용 셰어하우스'로 변경 되었음을 알려드립니다.</font></strong></div><br>
 						<div align="center"><strong>↓ Livingroom : 영화와 휴식 공간</strong></div>
 						<span class="image main"><img src="images3/m1.jpg" alt="" /></span>
 						<span class="image main"><img src="images3/m2.jpg" alt="" /></span>
@@ -67,7 +68,7 @@
 						<span class="image main"><img src="images3/k2.jpg" alt="" /></span>
 						<span class="image main"><img src="images3/k3.jpg" alt="" /></span>
 						<br>
-						<div align="center"><strong>↓ ROOM 1 : 70/25만원 (2인실, 화장실 있음)</strong></div>
+						<div align="center"><strong>↓ ROOM 1 : 70/25만원 (2인실, 화장실 있어요.)</strong></div>
 						<span class="image main"><img src="images3/r11.jpg" alt="" /></span>
 						<span class="image main"><img src="images3/r12.jpg" alt="" /></span>
 						<span class="image main"><img src="images3/r13.jpg" alt="" /></span>
@@ -86,9 +87,11 @@
 						<span class="image main"><img src="images3/r34.jpg" alt="" /></span>
 						<span class="image main"><img src="images3/r35.jpg" alt="" /></span>
 						<br>
+						<div align="center"><strong><font color="orange">'여성전용 셰어하우스'로 변경 되었음을 알려드립니다.</font></strong></div><br>
 						<div align="center">
 							<strong>
-							입주 시 가구 구조변경 가능 하구요, 1인실 방 침대가 아직 배송중 이네요 ㅜㅜ<br>
+							입주 시 원하시는 가구 구조변경 및 청소해 드립니다.<br>
+							1인실 방 침대가 아직 배송중 이네요 ㅜㅜ<br>
 							침대 배치 후 추가 업데이트 진행 할게요!!
 							</strong>
 						</div>
@@ -107,15 +110,15 @@
 								영화관 같은 거실에서 하우스메이트들과 영화 한 편 보는 일상을 즐겨보세요.
 								나초와 팝콘, 오징어까지 준비하는 센스 있는 친구들이 온다면 더 좋을 것 같네요!<br>
 								언제든지 입주가 가능 하며, 입주견학 신청 및 문의는 카톡 또는 전화주시면 감사하겠습니다.<br>
-								(여성 셰어하우스 또한 준비중 이니, 언제든지 문의 바랍니다.)
+								(다른 테마 셰어하우스 또한 준비중 이니, 많은 문의 바랍니다. 살고 싶은 테마가 있다면 좋은 의견도 받아요!)
 								</b>
 							</p>
 							<p>
 								<b>
-								<font color="#FE2E2E">남성전용 셰어하우스, 기본계약 최소 6개월<!-- <br>(** 1년 계약시 매월 2만원 할인) --></font><br>
+								<font color="#FE2E2E">여성전용 셰어하우스, 기본계약 최소 6개월<!-- <br>(** 1년 계약시 매월 2만원 할인) --></font><br>
 								◎ 구 조 - 방3, 화장실2, 발코니2, 거실, 부엌 <br>
-								◎ 개인옵션 - 침대, 옷행거, 책상, 의자, 실내화 등<br>
-								◎ 제공시설 - 빔프로젝트(영화), 쇼파/의자/흔들의자(거실), 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 신발장, 식기, 취사도구, 커피포트, 청소도구 등 <br>
+								◎ 개인옵션 - 침대, 옷행거, 책상, 의자, 실내화<br>
+								◎ 제공시설 - 빔프로젝트(영화), 2인쇼파/의자/흔들의자(거실), 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 신발장, 식기건조대, 취사도구, 커피포트, 청소도구 등 <br>
 								◎ 기타 - 지상/지하 주차가능, 엘리베이터 있음, 와이파이, 입주 수수료 없음
 								◎ 관리비(+공과금) 1/4
 								</b>
