--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 							<!-- Logo -->
 								<a href="/sharehouse" class="logo">
-									<span class="symbol"><img src="images3/logo.jpg" alt="" /></span><span class="title">stay here : 셰어하우스</span>
+									<span class="symbol"><img src="images3/logo.jpg" alt="" /></span><span class="title">modi : 셰어하우스</span>
 								</a>
 
 							<!-- Nav -->
@@ -36,8 +36,8 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="/sharehouse">STAY HERE ! </a></li>
-							<li><a href="yu.html">영남대학교 </a></li>
+							<li><a href="/sharehouse">SHARE HOUSE 'modi'</a></li>
+							<li><a href="yu.html">영남대학교</a></li>
 							<li><a href="itaewon.html">이태원</a></li>
 						</ul>
 					</nav>
@@ -49,10 +49,10 @@
 								<h3>따로 또 같이, <br>나의 두번 째 식구를 만나다.</h3>
 								<p>
 									<font size="2">
-									'함께가 아닌 개인의 삶이 편해진 세상'에 '사람과 사랑에 상처 받은 이들이 마음의 온기를 나누는 곳' 독립성과 유대감을 동시에 누리는 새로운 주거형태 '셰어하우스 스테이히얼' 입니다.<br>
+									'함께가 아닌 개인의 삶이 편해진 세상'에 '사람과 사랑에 상처 받은 이들이 마음의 온기를 나누는 곳' 독립성과 유대감을 동시에 누리는 새로운 주거형태 '셰어하우스 모디' 입니다.<br>
 									셰어하우스 입주자는 저비용 대비 쾌적한 주거환경과 정서적인 유대감으로 삶의 질을 높이는 장점이 있습니다.
 									여럿이서 함께 살면 1인 삶보다 일상생활이 풍요로워지고 다양한 커뮤니티를 형성할 수 있는 좋은 기회가 될 것입니다.
-									셰어하우스 스테이히얼은 공동 공간을 함께 나누어 쓰며 입주자간의 따뜻한 교류가 이루어지는 주거공간이 되도록 노력합니다.
+									셰어하우스 모디는 공동 공간을 함께 나누어 쓰며 입주자간의 따뜻한 교류가 이루어지는 주거공간이 되도록 노력합니다.
 									</font>
 								</p>
 								<h3>'왜 셰어하우스 일까요?'</h3>
@@ -155,7 +155,7 @@
 									<p>
 										<font color="orange">C O N A C T</font><br>
 										tel . <a href="tel:010-5366-2182">010.5366.2182</a><br>
-										kakao . <a href="https://open.kakao.com/o/sJc0k3s">chdichake</a><br>
+										kakao . chdichake<br>
 										instagram . <a href="https://www.instagram.com/chadichake/">stayhere</a>
 									</p>
 								</form>
@@ -174,7 +174,7 @@
 								</ul>
 							</section> -->
 							<ul class="copyright">
-								<li>stay here. &copy; All rights reserved</li>
+								<li>modi. &copy; All rights reserved</li>
 							</ul>
 						</div>
 					</footer>
