--- a/yu.html
+++ b/yu.html
@@ -41,7 +41,7 @@
 				<nav id="menu">
 					<h2>Menu</h2>
 					<ul>
-						<li><a href="/sharehouse">STAY HERE !</a></li>
+						<li><a href="/sharehouse">SHARE HOUSE 'modi'</a></li>
 						<li><a href="yu.html">영남대학교</a></li>
 						<li><a href="itaewon.html">이태원</a></li>
 					</ul>
@@ -135,13 +135,13 @@
 								<b>
 								<font color="orange">C O N A C T</font><br>
 								tel . <a href="tel:010-5366-2182">010.5366.2182</a><br>
-								kakao . <a href="https://open.kakao.com/o/sJc0k3s">chdichake</a><br>
+								kakao . chdichake<br>
 								instagram . <a href="https://www.instagram.com/chadichake/">stayhere</a>
 								</b>
 							</p>
 						</font>
 						<ul class="copyright">
-							<li>stay here. &copy; All rights reserved</li>
+							<li>modi. &copy; All rights reserved</li>
 						</ul>
 					</div>
 				</footer>
