--- a/yu.html
+++ b/yu.html
@@ -118,8 +118,8 @@
 								<font color="#FE2E2E">여성전용 셰어하우스, 기본계약 최소 6개월<!-- <br>(** 1년 계약시 매월 2만원 할인) --></font><br>
 								◎ 구 조 - 방3, 화장실2, 발코니2, 거실, 부엌 <br>
 								◎ 개인옵션 - 침대, 옷행거, 책상, 의자, 실내화<br>
-								◎ 제공시설 - 빔프로젝트(영화), 2인쇼파/의자/흔들의자(거실), 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 신발장, 식기건조대, 취사도구, 커피포트, 청소도구 등 <br>
-								◎ 기타 - 지상/지하 주차가능, 엘리베이터 있음, 와이파이, 입주 수수료 없음
+								◎ 제공시설 - 빔프로젝트(영화), 2인쇼파/의자/흔들의자(거실), 에어컨, 냉장고, 세탁기, 오븐기, 전자렌지, 빨래건조대, 신발장, 식기건조대, 취사도구, 커피포트, 분리수거대, 청소도구 등 <br>
+								◎ 기타 - 지상/지하 주차가능, 엘리베이터 있음, 와이파이, 입주 수수료 없음<br>
 								◎ 관리비(+공과금) 1/4
 								</b>
 							</p>
