--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 							<!-- Logo -->
 								<a href="/sharehouse" class="logo">
-									<span class="symbol"><img src="images3/logo.jpg" alt="" /></span><span class="title">modi : 셰어하우스</span>
+									<span class="symbol"><img src="images3/logo.jpg" alt="" /></span><span class="title"><font color="#339967">shareHouse : modi</font></span>
 								</a>
 
 							<!-- Nav -->
