--- a/yu.html
+++ b/yu.html
@@ -96,8 +96,8 @@
 							</strong>
 						</div>
 						<br>
-						<span class="image main"><img src="images3/house.jpg" alt="" /></span>
-						<span class="image main"><img src="images3/map.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/house1.jpg" alt="" /></span>
+						<span class="image main"><img src="images3/map1.jpg" alt="" /></span>
 						
 					</div>
 				</div>
