--- a/yu.html
+++ b/yu.html
@@ -55,11 +55,10 @@
 						<div align="center"><strong><font color="orange">안녕하세요.<br> 영남대학교 '여성전용' 셰어하우스 모디 입니다.</font></strong></div><br>
 						<div align="center"><strong>↓ Livingroom</strong></div>
 						<span class="image main"><img src="images3/m1.jpg" alt="" /></span>
-						<div align="center"><strong>↓ 거실은 영화 테마로 꾸며져 있습니다.<br>영화 빔프로젝트가 있어요.</strong></div>
+						<div align="center"><strong>거실은 영화 테마로 꾸며져 있습니다.<br>↓ 영화 빔프로젝트가 있어요.</strong></div>
 						<span class="image main"><img src="images3/m2.jpg" alt="" /></span>
-						<div align="center"><strong>↓ 마음 편히 여유를 즐길 수 있는 곳</strong></div>
 						<span class="image main"><img src="images3/m3.jpg" alt="" /></span>
-						<div align="center"><strong>↓ 친구들과 함께 보고 싶었던<br>영화를 집에서 편하게 즐겨보세요!</strong></div>
+						<div align="center"><strong>친구들과 함께 보고 싶었던<br>↓ 영화를 집에서 편하게 즐겨보세요!</strong></div>
 						<span class="image main"><img src="images3/m4.jpg" alt="" /></span>
 						<span class="image main"><img src="images3/m5.jpg" alt="" /></span>
 						<span class="image main"><img src="images3/m6.jpg" alt="" /></span>
