--- a/index.html
+++ b/index.html
@@ -154,9 +154,10 @@
 									</div> -->
 									<p>
 										<font color="orange">C O N A C T</font><br>
-										tel . <a href="tel:010-5366-2182">010.5366.2182</a><br>
-										kakao . chdichake<br>
-										instagram . <a href="https://www.instagram.com/chadichake/">modi.shareHouse</a>
+										tel. <a href="tel:010-5366-2182">010.5366.2182</a><br>
+										kakao : chdichake<br>
+										instagram : <a href="https://www.instagram.com/chadichake/">instagram.modi</a><br>
+										facebook page : <a href="https://www.facebook.com/modi.sharehouse/">facebook.modi</a>
 									</p>
 								</form>
 							</section>
