--- a/yu.html
+++ b/yu.html
@@ -41,7 +41,7 @@
 				<nav id="menu">
 					<h2>Menu</h2>
 					<ul>
-						<li><a href="/sharehouse">SHARE HOUSE 'modi'</a></li>
+						<li><a href="/sharehouse">SHARE HOUSE 'MODI'</a></li>
 						<li><a href="yu.html">영남대학교</a></li>
 						<li><a href="itaewon.html">이태원</a></li>
 					</ul>
@@ -112,7 +112,6 @@
 								<font color="orange"><b>영화를 좋아하는 사람들을 위한 주거공간 입니다.</b></font><br>
 								영화관 같은 거실에서 하우스메이트들과 영화 한 편 보는 일상을 즐겨보세요.
 								나초와 팝콘, 오징어까지 준비하는 센스 있는 친구들이 온다면 더 좋을 것 같네요!<br>
-								입주 및 견학 신청 문의는 전화 또는 카톡 주시면 됩니다.
 								</b>
 							</p>
 							<p>
@@ -136,9 +135,10 @@
 							<p>
 								<b>
 								<font color="orange">C O N A C T</font><br>
-								tel . <a href="tel:010-5366-2182">010.5366.2182</a><br>
-								kakao . chdichake<br>
-								instagram . <a href="https://www.instagram.com/chadichake/">modi.shareHouse</a>
+								tel. <a href="tel:010-5366-2182">010.5366.2182</a><br>
+								kakao : chdichake<br>
+								instagram : <a href="https://www.instagram.com/chadichake/">instagram.modi</a><br>
+										facebook page : <a href="https://www.facebook.com/modi.sharehouse/">facebook.modi</a>
 								</b>
 							</p>
 						</font>
