--- a/itaewon.html
+++ b/itaewon.html
@@ -41,7 +41,7 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="/sharehouse">SHARE HOUSE 'modi'</a></li>
+							<li><a href="/sharehouse">SHARE HOUSE 'MODI'</a></li>
 							<li><a href="yu.html">영남대학교</a></li>
 							<li><a href="itaewon.html">이태원</a></li>
 						</ul>
